Refactor: clean up core.css (reset, padding, animations, !important removed)

--- a/Frontend/public/index - Copia.html
+++ b/Frontend/public/index - Copia.html
@@ -14,7 +14,7 @@
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/fonts.css">
     <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.7">
+    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
 
 </head>
 
@@ -106,5 +106,3 @@
     <script type="module" src="assets/js/modules/auth/login.js"></script>
 
 </body>
-
-</html>
