--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,31 +5,37 @@
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Codici & Password - Accedi</title>
 
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="manifest" href="manifest.json?v=3.7" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
+    <!-- Pre-caricamento Font critici per velocità massima -->
+    <link rel="preload" href="assets/fonts/manrope/manrope-11.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
+        crossorigin>
+
     <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO BASE V3.7) -->
     <link rel="stylesheet" href="assets/css/core.css?v=3.7">
 
 </head>
 
 <body class="base-bg">
     <!-- 1. WRAPPER PRINCIPALE -->
-    <div class="base-container auth-viewport">
+    <div class="base-container">
 
         <!-- 2. FARO (Glow Effect) -->
         <div class="base-glow"></div>
 
         <!-- 3. VAULT CONTAINER -->
-        <div class="auth-vault">
+        <div class="vault">
 
             <!-- Card Login -->
-            <div class="auth-card border-glow">
+            <div class="card border-glow">
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
                     <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
@@ -45,30 +51,30 @@
                 <div class="saetta-drop"></div>
 
                 <!-- Icona Centrale -->
-                <div class="auth-icon-box">
+                <div class="icon-box">
                     <span class="material-symbols-outlined">security</span>
                 </div>
 
                 <!-- Titoli -->
-                <h1 class="auth-title" data-t="login_title">Accedi</h1>
-                <p class="auth-subtitle" data-t="login_subtitle">Inserisci le tue credenziali</p>
+                <h1 class="title" data-t="login_title">Accedi</h1>
+                <p class="subtitle" data-t="login_subtitle">Inserisci le tue credenziali</p>
 
                 <!-- Form Autenticazione -->
                 <form id="login-form">
 
                     <!-- Email / Username -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="email" data-t="username_label">Username</label>
-                        <input id="email" name="username" type="text" autocomplete="username" required
-                            class="auth-input" data-t-placeholder="username_placeholder" placeholder="Email o Username">
+                    <div class="form-group">
+                        <label class="label" for="email" data-t="username_label">Username</label>
+                        <input id="email" name="username" type="text" autocomplete="username" required class="input"
+                            data-t-placeholder="username_placeholder" placeholder="Email o Username">
                     </div>
 
                     <!-- Password -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="password" data-t="password_label">Password</label>
+                    <div class="form-group">
+                        <label class="label" for="password" data-t="password_label">Password</label>
                         <div class="password-wrapper">
                             <input id="password" name="password" type="password" autocomplete="current-password"
-                                required class="auth-input" placeholder="********">
+                                required class="input" placeholder="********">
                             <button type="button" class="toggle-password" id="btn-toggle-password"
                                 aria-label="Mostra Password">
                                 <span class="material-symbols-outlined">visibility</span>
@@ -80,7 +86,7 @@
                     </div>
 
                     <!-- Submit Button -->
-                    <button type="submit" id="login-submit-btn" class="auth-btn-primary" data-t="auth_button">
+                    <button type="submit" id="login-submit-btn" class="btn-primary" data-t="auth_button">
                         <span class="material-symbols-outlined">login</span>
                         Accedi
                     </button>
