--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -3,42 +3,46 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self'; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Codici & Password - Registrazione</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <link rel="manifest" href="manifest.json?v=3.7" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <!-- Pre-caricamento Font critici per velocità massima -->
+    <link rel="preload" href="assets/fonts/manrope/manrope-11.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
+        crossorigin>
+
     <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
-    <!-- CORE JS -->
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO BASE V3.7) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=3.7">
 </head>
 
 <body class="base-bg">
     <!-- 1. WRAPPER PRINCIPALE -->
-    <div class="base-container auth-viewport">
+    <div class="base-container">
 
         <!-- 2. FARO (Glow Effect) -->
         <div class="base-glow"></div>
 
         <!-- 3. VAULT CONTAINER -->
-        <div class="auth-vault">
+        <div class="vault">
 
             <!-- Card Registrazione -->
-            <div class="auth-card border-glow">
+            <div class="card border-glow">
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
-                    <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua">
+                    <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
+                        data-t-aria="aria_lang_selector">
                         <span class="material-symbols-outlined">language</span>
                     </button>
                     <div id="lang-dropdown" class="lang-dropdown">
@@ -51,60 +55,59 @@
                 <div class="saetta-drop"></div>
 
                 <!-- Icona Centrale -->
-                <div class="auth-icon-box">
+                <div class="icon-box">
                     <span class="material-symbols-outlined">person_add</span>
                 </div>
 
                 <!-- Titoli -->
-                <h1 class="auth-title" data-t="register_page_title">Registrati</h1>
-                <p class="auth-subtitle" data-t="login_subtitle">Crea il tuo account sicuro</p>
+                <h1 class="title" data-t="register_page_title">Registrati</h1>
+                <p class="subtitle" data-t="register_subtitle">Crea il tuo account sicuro</p>
 
                 <!-- Form Registrazione -->
                 <form id="register-form">
 
                     <!-- Nome & Cognome -->
-                    <div class="auth-form-row">
-                        <div class="auth-form-group">
-                            <label class="auth-label" for="nome" data-t="label_name">Nome</label>
-                            <input id="nome" name="nome" type="text" required class="auth-input" placeholder="Mario">
+                    <div class="flex-row gap-2">
+                        <div class="form-group flex-1">
+                            <label class="label" for="nome" data-t="label_name">Nome</label>
+                            <input id="nome" name="nome" type="text" required class="input" placeholder="Mario">
                         </div>
-                        <div class="auth-form-group">
-                            <label class="auth-label" for="cognome" data-t="label_surname">Cognome</label>
-                            <input id="cognome" name="cognome" type="text" required class="auth-input"
-                                placeholder="Rossi">
+                        <div class="form-group flex-1">
+                            <label class="label" for="cognome" data-t="label_surname">Cognome</label>
+                            <input id="cognome" name="cognome" type="text" required class="input" placeholder="Rossi">
                         </div>
                     </div>
 
                     <!-- Email -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="email" data-t="email_label">Email</label>
-                        <input id="email" name="email" type="email" autocomplete="username" required class="auth-input"
+                    <div class="form-group">
+                        <label class="label" for="email" data-t="email_label">Email</label>
+                        <input id="email" name="email" type="email" autocomplete="username" required class="input"
                             data-t-placeholder="email_placeholder" placeholder="mario.rossi@email.com">
                     </div>
 
                     <!-- Password -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="password" data-t="password_label_reg">Password</label>
+                    <div class="form-group">
+                        <label class="label" for="password" data-t="password_label_reg">Password</label>
                         <div class="password-wrapper">
                             <input id="password" name="password" type="password" autocomplete="new-password" required
-                                class="auth-input" data-t-placeholder="password_placeholder_reg" placeholder="********">
+                                class="input" data-t-placeholder="password_placeholder_reg" placeholder="********">
                             <button type="button" class="toggle-password" id="btn-toggle-password"
-                                aria-label="Mostra Password">
+                                aria-label="Mostra Password" data-t-aria="aria_toggle_password">
                                 <span class="material-symbols-outlined">visibility</span>
                             </button>
                         </div>
                     </div>
 
                     <!-- Conferma Password -->
-                    <div class="auth-form-group">
-                        <label class="auth-label" for="confirm-password" data-t="confirm_new_password">Conferma
+                    <div class="form-group">
+                        <label class="label" for="confirm-password" data-t="confirm_password_label">Conferma
                             Password</label>
                         <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                            required class="auth-input" placeholder="********">
+                            required class="input" placeholder="********">
                     </div>
 
                     <!-- Submit Button -->
-                    <button type="submit" id="register-submit-btn" class="auth-btn-primary" data-t="create_account_btn">
+                    <button type="submit" id="register-submit-btn" class="btn-primary" data-t="create_account_btn">
                         <span class="material-symbols-outlined">check_circle</span>
                         Nuova registrazione
                     </button>
@@ -112,8 +115,8 @@
                 </form>
 
                 <!-- Login Link -->
-                <div class="auth-footer-link-box">
-                    <span data-t="have_account_text">Hai giÃ  un account?</span>
+                <div class="flex-row items-center justify-center gap-2 mt-4 text-sm">
+                    <span data-t="have_account_text">Hai già un account?</span>
                     <a href="index.html" class="link-register" data-t="login_now_link">
                         Accedi ora
                     </a>
