--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -1,58 +1,117 @@
 <!DOCTYPE html>
-<html lang="it" class="dark protocol-forced-dark">
+<html lang="it" class="dark protocol-forced-dark" data-i18n="loading">
 
 <head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' ; font-src 'self'; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Codici & Password - Nuova Password</title> <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=3.3" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Codici & Password - Nuova Password</title>
+
+    <!-- PWA / Mobile Capable -->
+    <link rel="manifest" href="manifest.json?v=3.8" />
     <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3"> <!-- CORE JS -->
-    <script src="assets/js/core.js"></script>
-    <script type="module" src="assets/js/ui-core.js"></script>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!-- Pre-caricamento Font critici per velocità massima -->
+    <link rel="preload" href="assets/fonts/manrope/manrope-11.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
+        crossorigin>
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
 </head>
 
-<body class="base-bg"> <!-- 1. WRAPPER PRINCIPALE -->
-    <div class="base-container auth-viewport"> <!-- 2. FARO (Glow Effect) -->
-        <div class="base-glow"></div> <!-- 3. VAULT CONTAINER -->
-        <div class="auth-vault"> <!-- Card Nuova Password -->
-            <div class="auth-card border-glow"> <!-- SAETTA MASTER ANIMATION -->
+<body class="base-bg">
+    <!-- 1. WRAPPER PRINCIPALE -->
+    <div class="base-container">
+
+        <!-- 2. FARO (Glow Effect) -->
+        <div class="base-glow"></div>
+
+        <!-- 3. VAULT CONTAINER -->
+        <div class="vault">
+
+            <!-- Card Nuova Password -->
+            <div class="card border-glow">
+                <!-- Language Selector (Anchor to Card) -->
+                <div class="lang-selector-container">
+                    <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
+                        data-t-aria="aria_lang_selector">
+                        <span class="material-symbols-outlined">language</span>
+                    </button>
+                    <div id="lang-dropdown" class="lang-dropdown">
+                        <!-- Popolato via JS -->
+                    </div>
+                </div>
+
+                <!-- SAETTA MASTER ANIMATION -->
                 <div class="saetta-master"></div>
-                <div class="saetta-drop"></div> <!-- Icona Centrale -->
-                <div class="auth-icon-box"> <span class="material-symbols-outlined">vpn_key</span> </div>
+                <div class="saetta-drop"></div>
+
+                <!-- Icona Centrale -->
+                <div class="icon-box">
+                    <span class="material-symbols-outlined">lock_reset</span>
+                </div>
+
                 <!-- Titoli -->
-                <h1 class="auth-title" data-t="set_password_page_title">Nuova Password</h1>
-                <p class="auth-subtitle" data-t="password_req_title">Scegli una password sicura</p>
+                <h1 class="title" data-t="set_password_page_title">Nuova Password</h1>
+                <p class="subtitle" data-t="password_req_title">Scegli una password sicura</p>
+
                 <!-- Form Salvataggio -->
-                <form id="new-password-form"> <!-- Nuova Password -->
-                    <div class="auth-form-group"> <label class="auth-label" for="new-password"
-                            data-t="new_password">Nuova Password</label>
-                        <div class="password-wrapper"> <input id="new-password" name="new-password" type="password"
-                                autocomplete="new-password" required class="auth-input"
-                                data-t-placeholder="password_placeholder_reg" placeholder="********"> <button
-                                type="button" class="toggle-password" id="btn-toggle-password"
-                                aria-label="Mostra Password"> <span class="material-symbols-outlined">visibility</span>
-                            </button> </div>
-                    </div> <!-- Conferma Password -->
-                    <div class="auth-form-group"> <label class="auth-label" for="confirm-password"
-                            data-t="confirm_new_password">Conferma Password</label> <input id="confirm-password"
-                            name="confirm-password" type="password" autocomplete="new-password" required
-                            class="auth-input" placeholder="********"> </div> <!-- Submit Button --> <button
-                        type="submit" id="new-pass-submit-btn" class="auth-btn-primary" data-t="save_new_pass"> <span
-                            class="material-symbols-outlined">save</span> Salva Password </button>
-                </form> <!-- Annulla Link -->
-                <div class="auth-footer-link-box"> <a href="index.html" id="cancel-password-update" data-t="cancel">
-                        Annulla </a> </div> <!-- Footer Legale -->
-                <div class="legal-footer"> <span>&copy; 2026</span> </div>
+                <form id="new-password-form">
+                    <!-- Hidden Username for Accessibility & Password Managers -->
+                    <input type="text" name="username" autocomplete="username" style="display:none" aria-hidden="true">
+
+                    <!-- Nuova Password -->
+                    <div class="form-group">
+                        <label class="label" for="new-password" data-t="new_password">Nuova Password</label>
+                        <div class="password-wrapper">
+                            <input id="new-password" name="new-password" type="password" autocomplete="new-password"
+                                required class="input" data-t-placeholder="password_placeholder_reg"
+                                placeholder="********">
+                            <button type="button" class="toggle-password" id="btn-toggle-password"
+                                aria-label="Mostra Password" data-t-aria="aria_toggle_password">
+                                <span class="material-symbols-outlined">visibility</span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Conferma Password -->
+                    <div class="form-group">
+                        <label class="label" for="confirm-password" data-t="confirm_new_password">Conferma
+                            Password</label>
+                        <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
+                            required class="input" placeholder="********">
+                    </div>
+
+                    <!-- Submit Button -->
+                    <button type="submit" id="new-pass-submit-btn" class="btn-primary" data-t="save_new_pass">
+                        <span class="material-symbols-outlined">save</span>
+                        Salva Password
+                    </button>
+
+                </form>
+
+                <!-- Annulla Link -->
+                <a href="index.html" id="cancel-password-update" class="link-register" data-t="cancel">
+                    Annulla
+                </a>
+
+                <!-- Footer Legale -->
+                <div class="legal-footer">
+                    <span>&copy; 2026</span>
+                </div>
             </div>
         </div>
-    </div> <!-- Scripts -->
+    </div>
+
+    <!-- Scripts -->
     <script type="module" src="assets/js/main.js"></script>
     <script type="module" src="assets/js/modules/auth/imposta_nuova_password.js"></script>
 </body>
