--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="it" class="dark protocol-forced-dark">
+<html lang="it" class="dark protocol-forced-dark" data-i18n="loading">
 
 <head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> -->
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
@@ -19,8 +19,8 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.7) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.7">
+    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
 
 </head>
 
