--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="it" class="dark protocol-forced-dark">
+<html lang="it" class="dark protocol-forced-dark" data-i18n="loading">
 
 <head>
-    <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+    <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> -->
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
@@ -23,8 +23,8 @@
 
     <!-- Fonts -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.7) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.7">
+    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
 </head>
 
 <body class="base-bg">
@@ -61,7 +61,8 @@
 
                 <!-- Titoli -->
                 <h1 class="title" data-t="reset_page_title">Recupero</h1>
-                <p class="subtitle" data-t="reset_hint">Riceverai un link di ripristino</p>
+                <p class="subtitle" data-t="reset_hint">Ti invieremo un collegamento sicuro per impostare una nuova
+                    chiave d'accesso.</p>
 
                 <!-- Form Recupero -->
                 <form id="reset-form">
@@ -83,7 +84,7 @@
 
                 <!-- Back Link -->
                 <div class="flex-row items-center justify-center gap-2 mt-4 text-sm">
-                    <a href="index.html" class="flex-row items-center gap-2 font-bold" data-t="back_to_login_link">
+                    <a href="index.html" class="link-register flex-row items-center gap-2" data-t="back_to_login_link">
                         <span class="material-symbols-outlined text-base">arrow_back</span>
                         Torna all'accesso
                     </a>
