Refactor: Unified I18N Engine V3.8 - Centralized translations and enhanced ARIA accessibility across all Auth pages

--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -42,7 +42,7 @@
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
                     <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
-                        data-t-aria="aria_lang_selector">
+                        data-t-aria="select_language">
                         <span class="material-symbols-outlined">language</span>
                     </button>
                     <div id="lang-dropdown" class="lang-dropdown">
@@ -76,7 +76,7 @@
                                 required class="input" data-t-placeholder="password_placeholder_reg"
                                 placeholder="********">
                             <button type="button" class="toggle-password" id="btn-toggle-password"
-                                aria-label="Mostra Password" data-t-aria="aria_toggle_password">
+                                aria-label="Mostra Password" data-t-aria="show_hide_data">
                                 <span class="material-symbols-outlined">visibility</span>
                             </button>
                         </div>
@@ -87,7 +87,7 @@
                         <label class="label" for="confirm-password" data-t="confirm_new_password">Conferma
                             Password</label>
                         <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                            required class="input" placeholder="********">
+                            required class="input" data-t-placeholder="password_placeholder_reg" placeholder="********">
                     </div>
 
                     <!-- Submit Button -->
