--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -42,7 +42,7 @@
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
                     <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
-                        data-t-aria="aria_lang_selector">
+                        data-t-aria="select_language">
                         <span class="material-symbols-outlined">language</span>
                     </button>
                     <div id="lang-dropdown" class="lang-dropdown">
