--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -1,55 +1,68 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" data-i18n="loading">
 
 <head>
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+  <!-- <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;"> -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
   <title>Home Page</title>
 
-  <link rel="manifest" href="manifest.json?v=3.3" />
+  <link rel="manifest" href="manifest.json?v=3.8" />
   <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="assets/css/fonts.css">
-  <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-  <link rel="stylesheet" href="assets/css/operatore.css?v=3.3">
+  <!-- 1. Preload Font (Velocità) -->
+  <link rel="preload" href="assets/fonts/manrope/manrope-11.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
+    crossorigin>
+
+  <!-- 2. Core Fonts (Forzatura Body & Icone) -->
+  <link rel="stylesheet" href="assets/css/core_fonts.css">
+
+  <!-- 3. Design System Master (PROTOCOLLO BASE V3.8) -->
+  <link rel="stylesheet" href="assets/css/core.css?v=3.8">
+  <link rel="stylesheet" href="assets/css/core_fascie.css">
+
+  <!-- 4. Pagine specifiche (Standard V3.8) -->
+  <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
 
   <!-- CORE JS -->
   <script src="assets/js/core.js"></script>
   <script type="module" src="assets/js/ui-core.js"></script>
 </head>
 
-<body class="home-page">
+<body class="base-bg home-page">
   <div class="base-container">
     <div class="base-glow"></div>
 
-    <!-- HEADER FISSO -->
+    <!-- HEADER FISSO (V3.8 Balanced) -->
     <header class="base-header">
       <div class="header-balanced-container">
+        <!-- Sinistra: Avatar (Profilo) -->
         <div class="header-left">
-          <a href="profilo_privato.html" class="avatar-header-link">
+          <a href="profilo_privato.html" class="avatar-header-link" aria-label="Profilo" data-t-aria="aria_profile">
             <div id="header-user-avatar" class="header-avatar-box">
-              <img id="user-avatar-img" src="assets/images/user-avatar.png" alt="Avatar Utente">
-            </div>
-          </a>
-
-          <!-- Testo Cliccabile -->
-          <a href="profilo_privato.html" class="profile-header-link">
-            <div class="header-user-info">
-              <span id="home-greeting-text" class="header-greeting-text">...</span>
-              <h1 id="home-user-name" class="header-title">Home Page</h1>
+              <img id="user-avatar-img" src="assets/images/user-avatar.png" alt="Avatar">
             </div>
           </a>
         </div>
 
-        <!-- Center: Vuoto -->
-        <div class="header-center"></div>
+        <!-- Centro: Saluto Dinamico centrato -->
+        <div class="header-center">
+          <a href="profilo_privato.html" class="header-user-link"
+            style="text-decoration: none; color: inherit; -webkit-tap-highlight-color: transparent;">
+            <div class="header-user-info">
+              <span id="home-greeting-text" class="header-greeting-text">...</span>
+              <h1 id="home-user-name" class="header-title">...</h1>
+            </div>
+          </a>
+        </div>
 
         <!-- Right: Logout -->
         <div class="header-right">
-          <button type="button" id="header-logout-btn" class="btn-icon-header">
+          <button type="button" id="header-logout-btn" class="btn-icon-header" aria-label="Logout"
+            data-t-aria="aria_logout">
             <span class="material-symbols-outlined">logout</span>
           </button>
         </div>
@@ -64,13 +77,13 @@
         <a href="area_privata.html" class="matrix-card card-blue border-glow adaptive-shadow area-privato">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">lock</span></div>
           <div class="card-text-block">
-            <h3>Privato</h3>
+            <h3 data-t="section_private_title">Privato</h3>
           </div>
         </a>
         <a href="lista_aziende.html" class="matrix-card card-green border-glow adaptive-shadow area-azienda">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">apartment</span></div>
           <div class="card-text-block">
-            <h3>Azienda</h3>
+            <h3 data-t="section_company_title">Azienda</h3>
           </div>
         </a>
 
@@ -83,7 +96,7 @@
             </span>
           </div>
           <div class="card-text-block">
-            <h3>Scadenze</h3>
+            <h3 data-t="section_deadlines_title">Scadenze</h3>
           </div>
           <!-- Mini List Dinamica -->
           <div id="upcoming-list-container" class="micro-dashboard-list"></div>
@@ -97,7 +110,7 @@
             </span>
           </div>
           <div class="card-text-block">
-            <h3>Urgenze</h3>
+            <h3 data-t="section_urgencies_title">Urgenze</h3>
           </div>
           <!-- Mini List Dinamica -->
           <div id="expired-list-container" class="micro-dashboard-list"></div>
@@ -107,10 +120,10 @@
 
     <div class="spacer-footer"></div>
 
-    <!-- FOOTER -->
+    <!-- FOOTER (V3.8 Balanced) -->
     <footer class="base-footer">
       <!-- SX: Theme Switcher -->
-      <button type="button" id="theme-toggle-home" class="btn-icon-header">
+      <button type="button" id="theme-toggle-home" class="btn-icon-header" aria-label="Tema" data-t-aria="aria_theme">
         <span class="material-symbols-outlined">contrast</span>
       </button>
 
@@ -118,7 +131,8 @@
       <div class="footer-spacer"></div>
 
       <!-- DX: Settings Link -->
-      <a href="impostazioni.html" class="btn-icon-header footer-settings-link">
+      <a href="impostazioni.html" class="btn-icon-header footer-settings-link" aria-label="Impostazioni"
+        data-t-aria="aria_settings">
         <span class="material-symbols-outlined footer-settings-icon">tune</span>
       </a>
     </footer>
@@ -130,5 +144,3 @@
 </body>
 
 </html>
-
-
