--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -39,7 +39,7 @@
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
                     <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
-                        data-t-aria="aria_lang_selector">
+                        data-t-aria="select_language">
                         <span class="material-symbols-outlined">language</span>
                     </button>
                     <div id="lang-dropdown" class="lang-dropdown">
@@ -77,7 +77,7 @@
                             <input id="password" name="password" type="password" autocomplete="current-password"
                                 required class="input" placeholder="********">
                             <button type="button" class="toggle-password" id="btn-toggle-password"
-                                aria-label="Mostra Password" data-t-aria="aria_toggle_password">
+                                aria-label="Mostra Password" data-t-aria="show_hide_data">
                                 <span class="material-symbols-outlined">visibility</span>
                             </button>
                         </div>
