--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -42,7 +42,7 @@
                 <!-- Language Selector (Anchor to Card) -->
                 <div class="lang-selector-container">
                     <button id="lang-toggle-btn" class="lang-btn" aria-label="Cambia Lingua"
-                        data-t-aria="aria_lang_selector">
+                        data-t-aria="select_language">
                         <span class="material-symbols-outlined">language</span>
                     </button>
                     <div id="lang-dropdown" class="lang-dropdown">
@@ -70,11 +70,13 @@
                     <div class="flex-row gap-2">
                         <div class="form-group flex-1">
                             <label class="label" for="nome" data-t="label_name">Nome</label>
-                            <input id="nome" name="nome" type="text" required class="input" placeholder="Mario">
+                            <input id="nome" name="nome" type="text" required class="input"
+                                data-t-placeholder="label_name" placeholder="Mario">
                         </div>
                         <div class="form-group flex-1">
                             <label class="label" for="cognome" data-t="label_surname">Cognome</label>
-                            <input id="cognome" name="cognome" type="text" required class="input" placeholder="Rossi">
+                            <input id="cognome" name="cognome" type="text" required class="input"
+                                data-t-placeholder="label_surname" placeholder="Rossi">
                         </div>
                     </div>
 
@@ -92,7 +94,7 @@
                             <input id="password" name="password" type="password" autocomplete="new-password" required
                                 class="input" data-t-placeholder="password_placeholder_reg" placeholder="********">
                             <button type="button" class="toggle-password" id="btn-toggle-password"
-                                aria-label="Mostra Password" data-t-aria="aria_toggle_password">
+                                aria-label="Mostra Password" data-t-aria="show_hide_data">
                                 <span class="material-symbols-outlined">visibility</span>
                             </button>
                         </div>
@@ -103,7 +105,7 @@
                         <label class="label" for="confirm-password" data-t="confirm_password_label">Conferma
                             Password</label>
                         <input id="confirm-password" name="confirm-password" type="password" autocomplete="new-password"
-                            required class="input" placeholder="********">
+                            required class="input" data-t-placeholder="password_placeholder_reg" placeholder="********">
                     </div>
 
                     <!-- Submit Button -->
