pagine accesso e home page ok manca controllo finale GUIDA

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -37,37 +37,8 @@
     <div class="base-glow"></div>
 
     <!-- HEADER FISSO (V3.8 Balanced) -->
-    <header class="base-header">
-      <div class="header-balanced-container">
-        <!-- Sinistra: Avatar (Profilo) -->
-        <div class="header-left">
-          <a href="profilo_privato.html" class="avatar-header-link" aria-label="Profilo" data-t-aria="aria_profile">
-            <div id="header-user-avatar" class="header-avatar-box">
-              <img id="user-avatar-img" src="assets/images/user-avatar.png" alt="Avatar">
-            </div>
-          </a>
-        </div>
-
-        <!-- Centro: Saluto Dinamico centrato -->
-        <div class="header-center">
-          <a href="profilo_privato.html" class="header-user-link"
-            style="text-decoration: none; color: inherit; -webkit-tap-highlight-color: transparent;">
-            <div class="header-user-info">
-              <span id="home-greeting-text" class="header-greeting-text">...</span>
-              <h1 id="home-user-name" class="header-title">...</h1>
-            </div>
-          </a>
-        </div>
-
-        <!-- Right: Logout -->
-        <div class="header-right">
-          <button type="button" id="header-logout-btn" class="btn-icon-header" aria-label="Logout"
-            data-t-aria="aria_logout">
-            <span class="material-symbols-outlined">logout</span>
-          </button>
-        </div>
-      </div>
-    </header>
+    <!-- HEADER (Placeholder V3.9) -->
+    <div id="header-placeholder"></div>
 
     <div class="spacer-header"></div>
 
@@ -118,24 +89,8 @@
       </div>
     </main>
 
-    <div class="spacer-footer"></div>
-
-    <!-- FOOTER (V3.8 Balanced) -->
-    <footer class="base-footer">
-      <!-- SX: Theme Switcher -->
-      <button type="button" id="theme-toggle-home" class="btn-icon-header" aria-label="Tema" data-t-aria="aria_theme">
-        <span class="material-symbols-outlined">contrast</span>
-      </button>
-
-      <!-- C: Empty Spacer -->
-      <div class="footer-spacer"></div>
-
-      <!-- DX: Settings Link -->
-      <a href="impostazioni.html" class="btn-icon-header footer-settings-link" aria-label="Impostazioni"
-        data-t-aria="aria_settings">
-        <span class="material-symbols-outlined footer-settings-icon">tune</span>
-      </a>
-    </footer>
+    <!-- FOOTER (Placeholder V3.9) -->
+    <div id="footer-placeholder"></div>
   </div>
 
   <!-- Scripts -->
