--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -21,10 +21,10 @@
     <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
         crossorigin>
 
-    <!-- Fonts -->
+    <!-- 2. Core (Fonts & Protocollo Base V3.9) -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
+    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
 </head>
 
 <body class="base-bg">
@@ -83,7 +83,7 @@
                 </form>
 
                 <!-- Back Link -->
-                <div class="flex-row items-center justify-center gap-2 mt-4 text-sm">
+                <div class="auth-footer-links">
                     <a href="index.html" class="link-register flex-row items-center gap-2" data-t="back_to_login_link">
                         <span class="material-symbols-outlined text-base">arrow_back</span>
                         Torna all'accesso
