--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -17,10 +17,10 @@
     <link rel="preload" href="assets/fonts/material-symbols/material-symbols-0.woff2" as="font" type="font/woff2"
         crossorigin>
 
-    <!-- Fonts -->
+    <!-- 2. Core (Fonts & Protocollo Base V3.9) -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
+    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
 
 </head>
 
@@ -95,9 +95,11 @@
                 </form>
 
                 <!-- Registrazione Link -->
-                <a href="registrati.html" class="link-register" data-t="register_link">
-                    Registrazione nuovo utente
-                </a>
+                <div class="auth-footer-links">
+                    <a href="registrati.html" class="link-register" data-t="register_link">
+                        Registrazione nuovo utente
+                    </a>
+                </div>
 
                 <!-- Footer Legale -->
                 <div class="legal-footer">
